--- a/requirements.txt
+++ b/requirements.txt
@@ -96,7 +96,7 @@ pybtex==0.24.0
 pybtex-docutils==1.0.3
 pycparser==2.21
 pydata-sphinx-theme==0.13.3
-pyee==9.0.4
+pyee
 Pygments==2.16.1
 pyparsing==3.1.1
 pyppeteer==1.0.2
