--- a/requirements.txt
+++ b/requirements.txt
@@ -86,7 +86,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==10.0.0
 platformdirs==3.10.0
-playwright==1.38.0
+playwright
 prometheus-client==0.17.1
 prompt-toolkit==3.0.39
 psutil==5.9.5
